--- a/style/blog.css
+++ b/style/blog.css
@@ -1,9 +1,7 @@
-body {
-    font-family: serif;
-    margin: 20px;
-    line-height: 1.6;
-    color: #333;
-    background-color: #f4f4f4;
+
+main{
+    margin: 90px 20px 30px 20px;
+
 }
 
 .newspaper-header {
